@@ -1,5 +1,11 @@
 2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* Mono.Addins.Database/AddinScanner.cs: When a new domain needs to be
+	  assigned to a folder, try to reuse the startup domain, if it is
+	  set.
+
+2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* Mono.Addins/AddinRegistry.cs,
 	  Mono.Addins.Database/AddinScanFolderInfo.cs,
 	  Mono.Addins.Database/AddinDatabase.cs,
